--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,4 +11,4 @@ phases:
       - ./gradlew build
 
 artifacts:
-  files: build/libs/*.jar
+  files: build/libs/rest-demo-h2-crud-0.0.1-SNAPSHOT.jar
